--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: "Montserrat", sans-serif;
-      background: #f8f9fc;
+      background: #f5f7fa;
       color: #333;
       overflow-x: hidden;
     }
@@ -19,9 +19,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 12px 24px;
+      padding: 14px 24px;
       background: #ffffff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -29,7 +29,7 @@
     .navbar-left {
       display: flex;
       align-items: center;
-      gap: 16px;
+      gap: 20px;
     }
     .navbar-left h2 {
       font-weight: 700;
@@ -46,7 +46,7 @@
     }
     .navbar-right select,
     .navbar-right button {
-      padding: 6px 12px;
+      padding: 8px 14px;
       border: none;
       border-radius: 6px;
       cursor: pointer;
@@ -65,18 +65,54 @@
       transform: scale(1.05);
     }
 
-    /* Medium bar */
+    /* Mid-bar (future announcements) */
     .mid-bar {
       width: 100%;
-      padding: 14px;
-      background: #f1f8e9;
-      border-bottom: 1px solid #ddd;
+      padding: 28px;
+      background: linear-gradient(90deg, #e8f5e9, #f1f8e9);
       text-align: center;
       font-style: italic;
-      color: #777;
+      font-size: 1.1rem;
+      font-weight: 500;
+      color: #2e7d32;
+      box-shadow: inset 0 -1px 0 rgba(0,0,0,0.08);
     }
 
-    /* Info + News section */
+    /* Sidebar */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: -260px;
+      width: 240px;
+      height: 100%;
+      background: #2e7d32;
+      color: white;
+      padding: 20px;
+      transition: left 0.3s ease;
+      z-index: 1500;
+    }
+    .sidebar h3 {
+      margin-bottom: 20px;
+    }
+    .sidebar a {
+      display: block;
+      padding: 10px 0;
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+    .sidebar a:hover {
+      color: #c8e6c9;
+    }
+    .menu-toggle {
+      font-size: 1.4rem;
+      cursor: pointer;
+      margin-right: 12px;
+    }
+    .open { left: 0; }
+
+    /* Info + News */
     .info-news {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -85,9 +121,9 @@
     }
     .info-box, .news-box {
       background: white;
-      padding: 20px;
-      border-radius: 14px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      padding: 22px;
+      border-radius: 16px;
+      box-shadow: 0 6px 14px rgba(0,0,0,0.08);
       overflow: hidden;
       min-height: 220px;
     }
@@ -96,7 +132,6 @@
       color: #2e7d32;
     }
 
-    /* News scroller */
     .news-container {
       height: 150px;
       overflow: hidden;
@@ -109,7 +144,7 @@
     }
     .news-item {
       padding: 6px 0;
-      font-size: 0.9rem;
+      font-size: 0.95rem;
     }
     @keyframes scrollNews {
       0% { transform: translateY(0); }
@@ -120,116 +155,55 @@
     .card-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      padding: 24px;
+      gap: 24px;
+      padding: 30px;
     }
     .card {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px;
-      border-radius: 14px;
-      background: white;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      padding: 26px;
+      border-radius: 18px;
+      background: linear-gradient(135deg, #ffffff, #f1f8e9);
+      box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
       opacity: 0;
       transform: translateY(40px);
     }
-    .card-icon { font-size: 2rem; margin-bottom: 12px; }
-    .card-title { font-weight: 600; margin-bottom: 8px; }
-    .card-desc { font-size: 0.9rem; color: #444; text-align: center; }
-    .card:hover {
-      transform: translateY(-6px) scale(1.02);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.12);
+    .card-icon {
+      font-size: 2.4rem;
+      margin-bottom: 14px;
     }
-
-    /* Reveal animation */
+    .card-title {
+      font-weight: 700;
+      margin-bottom: 8px;
+      font-size: 1.1rem;
+      color: #2e7d32;
+    }
+    .card-desc {
+      font-size: 0.95rem;
+      color: #444;
+      text-align: center;
+    }
+    .card:hover {
+      transform: translateY(-10px) scale(1.05);
+      box-shadow: 0 14px 24px rgba(0,0,0,0.15);
+    }
     .reveal {
       opacity: 1 !important;
       transform: translateY(0) !important;
       transition: all 0.8s ease;
     }
 
-    /* Card colors */
-    .seeds { background: #eaf9f0; }
-    .schemes { background: #fdf3e7; }
-    .weather { background: #eaf3fc; }
-    .calendar { background: #f4ecf9; }
-    .fertilizer { background: #f9fce7; }
-    .soil { background: #f2f2f2; }
-    .msp { background: #e7f9f9; }
-    .yield { background: #f9e7f7; }
-
-    /* Modal styling */
-    .modal {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
-      justify-content: center;
-      align-items: center;
-      z-index: 2000;
-      animation: fadeIn 0.3s ease forwards;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    .modal-content {
-      background: #fff;
-      padding: 24px;
-      border-radius: 14px;
-      width: 350px;
-      max-width: 90%;
-      transform: scale(0.8);
-      animation: popup 0.3s ease forwards;
-      position: relative;
-    }
-    @keyframes popup {
-      to { transform: scale(1); }
-    }
-    .modal h3 {
-      margin-bottom: 12px;
-      color: #2e7d32;
-      text-align: center;
-    }
-    .modal form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .modal input, .modal select {
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    .modal button {
-      padding: 10px;
-      background: #2e7d32;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: 600;
-    }
-    .modal button:hover {
-      background: #256028;
-    }
-    .toggle-link {
-      text-align: center;
-      font-size: 0.85rem;
-      margin-top: 8px;
-      color: #2e7d32;
-      cursor: pointer;
-    }
-    .close-btn {
-      position: absolute;
-      top: 8px;
-      right: 12px;
-      font-size: 1.2rem;
-      cursor: pointer;
-      color: #666;
-    }
+    /* Color themes */
+    .seeds { background: linear-gradient(135deg,#e8f5e9,#c8e6c9); }
+    .schemes { background: linear-gradient(135deg,#fff3e0,#ffe0b2); }
+    .weather { background: linear-gradient(135deg,#e3f2fd,#bbdefb); }
+    .calendar { background: linear-gradient(135deg,#f3e5f5,#e1bee7); }
+    .fertilizer { background: linear-gradient(135deg,#f9fbe7,#f0f4c3); }
+    .soil { background: linear-gradient(135deg,#eeeeee,#e0e0e0); }
+    .msp { background: linear-gradient(135deg,#e0f7fa,#b2ebf2); }
+    .yield { background: linear-gradient(135deg,#fce4ec,#f8bbd0); }
 
     @media (max-width: 768px) {
       .info-news { grid-template-columns: 1fr; }
@@ -237,9 +211,18 @@
   </style>
 </head>
 <body>
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <h3>📋 Menu</h3>
+    <a href="#">About Us</a>
+    <a href="#">MSP</a>
+    <a href="#">Yield Comparison</a>
+  </div>
+
   <!-- Navbar -->
   <div class="navbar">
     <div class="navbar-left">
+      <span class="menu-toggle" onclick="toggleSidebar()">☰</span>
       <h2>🌾 Solutioneers</h2>
       <div class="navbar-time" id="datetime"></div>
     </div>
@@ -249,15 +232,15 @@
         <option>हिन्दी</option>
         <option>ਪੰਜਾਬੀ</option>
       </select>
-      <button onclick="openModal('login')">Login</button>
-      <button onclick="openModal('signup')">Sign Up</button>
+      <button>Login</button>
+      <button>Sign Up</button>
     </div>
   </div>
 
-  <!-- Medium Bar -->
-  <div class="mid-bar">[ Space reserved for future announcements ]</div>
+  <!-- Mid-bar -->
+  <div class="mid-bar">🚀 [ Big announcements will appear here soon ] 🚀</div>
 
-  <!-- Info + News Section -->
+  <!-- Info + News -->
   <div class="info-news">
     <div class="info-box">
       <h3>About Solutioneers</h3>
@@ -279,77 +262,55 @@
 
   <!-- Card Section -->
   <div class="card-grid">
-    <a href="seeds.html" class="card seeds">
+    <a href="#" class="card seeds">
       <div class="card-icon">🌱</div>
       <div class="card-title">Seeds Availability</div>
       <div class="card-desc">Check seed stock & availability near you.</div>
     </a>
-    <a href="schemes.html" class="card schemes">
+    <a href="#" class="card schemes">
       <div class="card-icon">📜</div>
       <div class="card-title">Govt Schemes</div>
       <div class="card-desc">Explore latest agriculture policies & subsidies.</div>
     </a>
-    <a href="weather.html" class="card weather">
+    <a href="#" class="card weather">
       <div class="card-icon">☁️</div>
       <div class="card-title">Weather Forecast</div>
       <div class="card-desc">Stay updated with 7-day forecasts for your area.</div>
     </a>
-    <a href="calendar.html" class="card calendar">
+    <a href="#" class="card calendar">
       <div class="card-icon">📅</div>
       <div class="card-title">Crop Calendar</div>
       <div class="card-desc">View sowing & harvesting schedules.</div>
     </a>
-    <a href="fertilizer.html" class="card fertilizer">
+    <a href="#" class="card fertilizer">
       <div class="card-icon">🪴</div>
       <div class="card-title">Fertilizer Advisory</div>
       <div class="card-desc">Get pest control & fertilizer recommendations.</div>
     </a>
-    <a href="soil.html" class="card soil">
+    <a href="#" class="card soil">
       <div class="card-icon">🌍</div>
       <div class="card-title">Soil Health</div>
       <div class="card-desc">Check soil quality & improvement methods.</div>
     </a>
-    <a href="msp.html" class="card msp">
+    <a href="#" class="card msp">
       <div class="card-icon">💰</div>
       <div class="card-title">MSP & Market Rates</div>
       <div class="card-desc">Latest MSP rates & eNAM updates.</div>
     </a>
-    <a href="yield.html" class="card yield">
+    <a href="#" class="card yield">
       <div class="card-icon">📊</div>
       <div class="card-title">Yield Comparison</div>
       <div class="card-desc">Compare crop yields across regions.</div>
     </a>
   </div>
 
-  <!-- Modal -->
-  <div class="modal" id="authModal">
-    <div class="modal-content">
-      <span class="close-btn" onclick="closeModal()">✖</span>
-      <h3 id="modalTitle">Login</h3>
-      <form id="authForm">
-        <!-- Login Fields -->
-        <div id="loginFields">
-          <input type="email" placeholder="Email" required>
-          <input type="password" placeholder="Password" required>
-          <button type="submit">Login</button>
-        </div>
-        <!-- Signup Fields -->
-        <div id="signupFields" style="display:none;">
-          <input type="text" placeholder="Full Name" required>
-          <input type="email" placeholder="Email" required>
-          <input type="password" placeholder="Password" required>
-          <input type="password" placeholder="Confirm Password" required>
-          <input type="number" placeholder="Land Size (acres)" required>
-          <input type="text" placeholder="Crop Type" required>
-          <button type="submit">Sign Up</button>
-        </div>
-      </form>
-      <div class="toggle-link" onclick="toggleAuth()">Don’t have an account? Sign Up</div>
-    </div>
-  </div>
-
   <script>
-    // Show IST time + date
+    // Sidebar toggle
+    function toggleSidebar() {
+      document.getElementById("sidebar").classList.toggle("open");
+    }
+
+    // Time updater
     function updateTime() {
       const now = new Date();
       const options = { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric',
@@ -359,7 +320,7 @@
     setInterval(updateTime, 1000);
     updateTime();
 
-    // Reveal cards on scroll
+    // Card reveal animation
     const cards = document.querySelectorAll('.card');
     const revealOnScroll = () => {
       const trigger = window.innerHeight * 0.85;
@@ -370,43 +331,6 @@
     };
     window.addEventListener('scroll', revealOnScroll);
     revealOnScroll();
-
-    // Modal Logic
-    const modal = document.getElementById("authModal");
-    const loginFields = document.getElementById("loginFields");
-    const signupFields = document.getElementById("signupFields");
-    const modalTitle = document.getElementById("modalTitle");
-    const toggleLink = document.querySelector(".toggle-link");
-
-    function openModal(type) {
-      modal.style.display = "flex";
-      if (type === "login") {
-        loginFields.style.display = "block";
-        signupFields.style.display = "none";
-        modalTitle.innerText = "Login";
-        toggleLink.innerText = "Don’t have an account? Sign Up";
-      } else {
-        loginFields.style.display = "none";
-        signupFields.style.display = "block";
-        modalTitle.innerText = "Sign Up";
-        toggleLink.innerText = "Already have an account? Login";
-      }
-    }
-    function closeModal() {
-      modal.style.display = "none";
-    }
-    function toggleAuth() {
-      if (loginFields.style.display === "block") {
-        openModal("signup");
-      } else {
-        openModal("login");
-      }
-    }
-    window.onclick = function(event) {
-      if (event.target === modal) {
-        closeModal();
-      }
-    };
   </script>
 </body>
 </html>
