--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<title>Solutioneers • Smart Agriculture Dashboard</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
 <style>
   *{box-sizing:border-box;margin:0;padding:0}
   html,body{height:100%}
@@ -68,7 +75,7 @@
   }
   /* INFO + NEWS */
   .section{display:grid;grid-template-columns:1fr 360px;gap:20px;margin:22px}
-  .card-large{border-radius:14px;background:#fff;padding:22px;box-shadow:0 12px 32px rgba(16,64,28,0.05)}
+  .card-large{border-radius:14px;background:#fff;padding:22px;box-shadow:0 12px 32px rgba(16,64,28,0.05);opacity:1;transform:none;}
   .about h3{color:#146631;margin-bottom:10px;font-size:20px}
   .about p{color:#2c4d3a;opacity:.95}
   .news-box{border-radius:14px;padding:18px;background:linear-gradient(180deg,#fff,#fbfffd);box-shadow:0 12px 32px rgba(16,64,28,0.04)}
@@ -81,17 +88,13 @@
   .grid{margin:22px;display:grid;grid-template-columns:repeat(auto-fit,minmax(420px,1fr));gap:22px}
   .big-card{
     position:relative;overflow:hidden;border-radius:16px;height:320px;color:#fff;display:flex;flex-direction:column;justify-content:flex-end;padding:28px;
-    box-shadow:0 24px 60px rgba(6,40,18,0.06);transition:transform .45s cubic-bezier(.2,.9,.2,1),box-shadow .45s;background-size:cover;background-position:center
+    box-shadow:0 24px 60px rgba(6,40,18,0.06);transition:transform .45s cubic-bezier(.2,.9,.2,1),box-shadow .45s;background-size:cover;background-position:center;
+    opacity:1;transform:none;
   }
   .big-card::after{content:"";position:absolute;inset:0;background:linear-gradient(180deg,transparent 36%,rgba(3,20,10,0.6));mix-blend-mode:multiply}
   .big-card .title{position:relative;font-weight:900;font-size:22px;z-index:2}
   .big-card .desc{position:relative;margin-top:8px;font-weight:600;opacity:.95;z-index:2;font-size:14px}
   .big-card:hover{transform:translateY(-8px) scale(1.02);box-shadow:0 34px 80px rgba(6,40,18,0.12)}
-  /* CARDS VISIBLE FIX APPLIED BELOW */
-  .big-card, .card-large { 
-    opacity: 1;
-    transform: none;
-  }
   /* CHATBOT */
   .chat-bubble{position:fixed;right:22px;bottom:22px;width:64px;height:64px;border-radius:50%;background:linear-gradient(180deg,#1e7b3f,#166531);display:flex;align-items:center;justify-content:center;color:#fff;box-shadow:0 12px 28px rgba(30,123,63,0.18);cursor:pointer;z-index:1300}
   .chat-window{position:fixed;right:22px;bottom:100px;width:360px;height:480px;border-radius:12px;background:#fff;box-shadow:0 20px 60px rgba(20,40,20,0.12);overflow:hidden;display:flex;flex-direction:column;z-index:1300;transform:translateY(8px);opacity:0;pointer-events:none;transition:all .28s}
@@ -121,3 +124,67 @@
     .nav-left .nav-time{display:none}
   }
 </style>
+</head>
+<body>
+  <!-- SIDEBAR -->
+  <aside id="sidebar" aria-hidden="true">
+    <h3>📋 Dashboard</h3>
+    <nav style="display:flex;flex-direction:column;gap:8px;margin-top:8px">
+      <a href="#about">About Us</a>
+      <a href="#msp">MSP</a>
+      <a href="#yield">Yield Comparison</a>
+    </nav>
+  </aside>
+  <!-- NAVBAR -->
+  <header class="navbar">
+    <div class="nav-left">
+      <button id="menuBtn" class="menu-btn" title="Menu">☰</button>
+      <div class="brand">
+        <div class="logo">S</div>
+        <div>
+          <div style="font-size:16px">Solutioneers</div>
+          <div class="meta">Smart Agriculture Group</div>
+        </div>
+      </div>
+      <div class="nav-time" id="navTime">Loading IST...</div>
+    </div>
+    <div class="nav-right">
+      <select class="lang-select" id="langSel">
+        <option>English</option>
+        <option>हिन्दी</option>
+        <option>ਪੰਜਾਬੀ</option>
+      </select>
+      <button id="btnLogin" class="btn login">Login</button>
+      <button id="btnSignup" class="btn cta">Sign Up</button>
+    </div>
+  </header>
+  <!-- HERO / ANNOUNCEMENT -->
+  <main>
+    <section class="hero" role="banner" aria-label="Announcement">
+      <div class="left">
+        <h1>Grow smarter. Harvest better.</h1>
+        <p>Real-time advisories, market prices, subsidies and soil insights — built for farmers, powered by data.</p>
+        <div class="cta-row">
+          <button class="cta primary">Explore Dashboard</button>
+          <button class="cta ghost">How it works</button>
+        </div>
+      </div>
+      <div class="right" style="background-image:url('https://images.unsplash.com/photo-1517816743773-6e0fd518b4a6?q=80&amp;w=1400&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;s=6c3c6b0d4f0b9d7b2d5a3f1e2b2f4a47')">
+        Farmers • Community
+      </div>
+    </section>
+    <!-- EXTRA BIG ANNOUNCEMENT BAR -->
+    <div class="big-announcement">
+      🚜 Important: Subsidy applications open this month — check "Govt Schemes" and see eligibility. Click a card below to explore.
+    </div>
+    <!-- Info + News -->
+    <section class="section">
+      <div id="about" class="card-large about">
+        <h3>About Solutioneers</h3>
+        <p>We bring practical digital tools to farmers — weather forecasting, MSP updates, soil health recommendations and local advisories that help you decide what to plant and when.</p>
+        <p style="margin-top:12px;color:#2e7b3f;font-weight:800">Your land. Your data. Better yields.</p>
+      </div>
+      <aside id="news" class="news-box">
+        <h3>Latest News</h3>
+        <div class="
+
